# echo_tutor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  sample_text.txt
data/uploads/: .gitkeep
echo_tutor/: __init__.py  config.py  main.py
echo_tutor/agents/: graph.py  reader_agent.py  tutor_agent.py
echo_tutor/api/: routes.py
echo_tutor/models/: schemas.py
echo_tutor/services/: modelscope_client.py
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: FileUpload.vue
frontend/src/services/: api.js
frontend/src/views/: Home.vue
scripts/: diagnose_api.py
tests/: test_config.py
